<resources>
    <string name="app_name">Drawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Nature</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="conversion">Conversion</string>
    <string name="Exchange">Exchange</string>
    <string name="dirham">DH</string>
    <string name="dollar">$</string>
    <string name="btn_dol_to_dh">Dollar -> Dirham</string>
    <string name="montant_dollar">Montant en Dollar</string>
</resources>